:fix: refactored main.sass

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -64,13 +64,13 @@
           <!-- Entrée #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Tartare de poulpe acidulé</span>
+              <span class="text-medium">Tartare de poulpe acidulé</span>
               <div class="menu-item__subtitle">
                 Aux zests d'orange
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">25€</span>
+              <span class="text-medium">25€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -80,13 +80,13 @@
           <!-- Entrée #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Velouté de légumes d'antan</span>
+              <span class="text-medium">Velouté de légumes d'antan</span>
               <div class="menu-item__subtitle">
                 Carrote, panais, topinambour
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">25€</span>
+              <span class="text-medium">25€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -96,13 +96,13 @@
           <!-- Entrée #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Soupe à l'oignon</span>
+              <span class="text-medium">Soupe à l'oignon</span>
               <div class="menu-item__subtitle">
                 Revisitée
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">20€</span>
+              <span class="text-medium">20€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -122,13 +122,13 @@
           <!-- Plat #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Coquilles Saint-Jacques</span>
+              <span class="text-medium">Coquilles Saint-Jacques</span>
               <div class="menu-item__subtitle">
                 Accompagnées d'une purée de panais
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">25€</span>
+              <span class="text-medium">25€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -138,13 +138,13 @@
           <!-- Plat #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Magret de canard</span>
+              <span class="text-medium">Magret de canard</span>
               <div class="menu-item__subtitle">
                  Et parmentier de pommes de terres
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">35€</span>
+              <span class="text-medium">35€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -154,13 +154,13 @@
           <!-- Plat #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Pigeonneau d'Ile-et-Vilaine</span>
+              <span class="text-medium">Pigeonneau d'Ile-et-Vilaine</span>
               <div class="menu-item__subtitle">
                  Sur son lit de gnocchis aux légumes
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">44€</span>
+              <span class="text-medium">44€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -181,13 +181,13 @@
           <!-- Dessert #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Pétales de violettes glaçées</span>
+              <span class="text-medium">Pétales de violettes glaçées</span>
               <div class="menu-item__subtitle">
                  Et purée de noisettes
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">18€</span>
+              <span class="text-medium">18€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -197,13 +197,13 @@
           <!-- Dessert #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Fondant au chocolat</span>
+              <span class="text-medium">Fondant au chocolat</span>
               <div class="menu-item__subtitle">
                  Revisité
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">22€</span>
+              <span class="text-medium">22€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -213,13 +213,13 @@
           <!-- Dessert #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Tiramisu</span>
+              <span class="text-medium">Tiramisu</span>
               <div class="menu-item__subtitle">
                  Myrtilles et pâte d'amande
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">23€</span>
+              <span class="text-medium">23€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
