--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -58,13 +58,13 @@
         <!-- Entrée #1 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Ravioles de foie gras</span>
+            <span class="text-medium">Ravioles de foie gras</span>
             <div class="menu-item__subtitle">
               Accompagnés de leur crême à la truffe
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">25€</span>
+            <span class="text-medium">25€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -74,13 +74,13 @@
         <!-- Entrée #2 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Caviar osciètre</span>
+            <span class="text-medium">Caviar osciètre</span>
             <div class="menu-item__subtitle">
                Sur blini à la farine de blé noir
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">35€</span>
+            <span class="text-medium">35€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -90,13 +90,13 @@
         <!-- Entrée #3 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Homard et espuma de langoustine</span>
+            <span class="text-medium">Homard et espuma de langoustine</span>
             <div class="menu-item__subtitle">
                Mariée aux zests d'orange
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">20€</span>
+            <span class="text-medium">20€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -106,13 +106,13 @@
         <!-- Entrée #4 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Foie gras de canard cuit entier</span>
+            <span class="text-medium">Foie gras de canard cuit entier</span>
             <div class="menu-item__subtitle">
                Confiture de figue et pain toasté
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">40€</span>
+            <span class="text-medium">40€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -132,13 +132,13 @@
         <!-- Plat #1 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Noix de coquille Saint Jacques</span>
+            <span class="text-medium">Noix de coquille Saint Jacques</span>
             <div class="menu-item__subtitle">
                Sur lit de purée celeri-rave
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">40€</span>
+            <span class="text-medium">40€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -148,13 +148,13 @@
         <!-- Plat #2 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Langoustine poelée</span>
+            <span class="text-medium">Langoustine poelée</span>
             <div class="menu-item__subtitle">
                Purée de patate douce
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">35€</span>
+            <span class="text-medium">35€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -164,13 +164,13 @@
         <!-- Plat #3 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Mijoté de queue de boeuf</span>
+            <span class="text-medium">Mijoté de queue de boeuf</span>
             <div class="menu-item__subtitle">
               Et riz sauvage aux zests de citron
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">44€</span>
+            <span class="text-medium">44€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -190,13 +190,13 @@
         <!-- Dessert #1 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Macaron noisette et chocolat</span>
+            <span class="text-medium">Macaron noisette et chocolat</span>
             <div class="menu-item__subtitle">
               Glace au caramel brun et sel de Guérande
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">18€</span>
+            <span class="text-medium">18€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -206,13 +206,13 @@
         <!-- Dessert #2 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Baba au rhum revisité</span>
+            <span class="text-medium">Baba au rhum revisité</span>
             <div class="menu-item__subtitle">
               Avec son coulis de citron
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">22€</span>
+            <span class="text-medium">22€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -222,13 +222,13 @@
         <!-- Dessert #3 -->
         <article class="menu-item card d-flex">
           <div class="menu-item__title">
-            <span class="medium">Tarte au citron meringuée</span>
+            <span class="text-medium">Tarte au citron meringuée</span>
             <div class="menu-item__subtitle">
               Destructurée
             </div> <!-- /.subtitle -->
           </div> <!-- ./__title -->
           <div class="menu-item__price">
-            <span class="medium">23€</span>
+            <span class="text-medium">23€</span>
           </div> <!-- /__price -->
           <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
