--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -60,13 +60,13 @@
           <!-- Entrée #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Fricassée d'escargot</span>
+              <span class="text-medium">Fricassée d'escargot</span>
               <div class="menu-item__subtitle">
                 Au piment d'espelette
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">25€</span>
+              <span class="text-medium">25€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -76,13 +76,13 @@
           <!-- Entrée #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Foie gras de canard mi-cuit</span>
+              <span class="text-medium">Foie gras de canard mi-cuit</span>
               <div class="menu-item__subtitle">
                 Et ses copeaux de truffe noire
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">35€</span>
+              <span class="text-medium">35€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -92,13 +92,13 @@
           <!-- Entrée #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Oeuf au plat</span>
+              <span class="text-medium">Oeuf au plat</span>
               <div class="menu-item__subtitle">
                 Assaisonné à la truffe sur lit de crême
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">20€</span>
+              <span class="text-medium">20€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -118,13 +118,13 @@
           <!-- Plat #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Filet de boeuf aux herbes</span>
+              <span class="text-medium">Filet de boeuf aux herbes</span>
               <div class="menu-item__subtitle">
                 Accompagné de sa ribambelle de légumes
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">20€</span>
+              <span class="text-medium">20€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -134,13 +134,13 @@
           <!-- Plat #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Parmentier de queue de boeuf</span>
+              <span class="text-medium">Parmentier de queue de boeuf</span>
               <div class="menu-item__subtitle">
                 Accompagné de sa ribambelle de légumes
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">44€</span>
+              <span class="text-medium">44€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -150,13 +150,13 @@
           <!-- Plat #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Filet de Turbot</span>
+              <span class="text-medium">Filet de Turbot</span>
               <div class="menu-item__subtitle">
                  Aux agrumes
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">44€</span>
+              <span class="text-medium">44€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -176,13 +176,13 @@
           <!-- Dessert #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Paris-Brest</span>
+              <span class="text-medium">Paris-Brest</span>
               <div class="menu-item__subtitle">
                  Revisité
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">18€</span>
+              <span class="text-medium">18€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -192,13 +192,13 @@
           <!-- Dessert #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Macaron au chocolat d'exception</span>
+              <span class="text-medium">Macaron au chocolat d'exception</span>
               <div class="menu-item__subtitle">
                  Et glâce à la vanille de Madagascar
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">18€</span>
+              <span class="text-medium">18€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -208,13 +208,13 @@
           <!-- Dessert #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Mousse au chocolat</span>
+              <span class="text-medium">Mousse au chocolat</span>
               <div class="menu-item__subtitle">
                  Au piment d'espelette et à la truffe noire
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">23€</span>
+              <span class="text-medium">23€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
