--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -59,13 +59,13 @@
           <!-- Entrée #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Tartare de thon</span>
+              <span class="text-medium">Tartare de thon</span>
               <div class="menu-item__subtitle">
                   Assaisonné de yuzu
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">20€</span>
+              <span class="text-medium">20€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -75,13 +75,13 @@
           <!-- Entrée #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Bouchée de homard croustillant</span>
+              <span class="text-medium">Bouchée de homard croustillant</span>
               <div class="menu-item__subtitle">
                 Et sa farandole de petits légumes
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">25€</span>
+              <span class="text-medium">25€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -91,13 +91,13 @@
           <!-- Entrée #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Velouté de cèpes</span>
+              <span class="text-medium">Velouté de cèpes</span>
               <div class="menu-item__subtitle">
                 Aux truffes
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">25€</span>
+              <span class="text-medium">25€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -117,13 +117,13 @@
           <!-- Plat #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Poulet rôti aux herbes de provence</span>
+              <span class="text-medium">Poulet rôti aux herbes de provence</span>
               <div class="menu-item__subtitle">
                 Et sa crême de truffe
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">25€</span>
+              <span class="text-medium">25€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -133,13 +133,13 @@
           <!-- Plat #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Langoustine rôtie</span>
+              <span class="text-medium">Langoustine rôtie</span>
               <div class="menu-item__subtitle">
                 Et ses légumes de saison
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">35€</span>
+              <span class="text-medium">35€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -149,13 +149,13 @@
           <!-- Plat #3 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Côte de boeuf angus</span>
+              <span class="text-medium">Côte de boeuf angus</span>
               <div class="menu-item__subtitle">
                 Et sa purée de panais
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">35€</span>
+              <span class="text-medium">35€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -175,13 +175,13 @@
           <!-- Dessert #1 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Farandole de desserts</span>
+              <span class="text-medium">Farandole de desserts</span>
               <div class="menu-item__subtitle">
                 Du chef
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">18€</span>
+              <span class="text-medium">18€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -191,13 +191,13 @@
           <!-- Dessert #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Crême brulée</span>
+              <span class="text-medium">Crême brulée</span>
               <div class="menu-item__subtitle">
                 Revisitée
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">22€</span>
+              <span class="text-medium">22€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -207,13 +207,13 @@
           <!-- Dessert #2 -->
           <article class="menu-item card d-flex">
             <div class="menu-item__title">
-              <span class="medium">Tiramisu</span>
+              <span class="text-medium">Tiramisu</span>
               <div class="menu-item__subtitle">
                 A la noisette
               </div> <!-- /.subtitle -->
             </div> <!-- ./__title -->
             <div class="menu-item__price">
-              <span class="medium">23€</span>
+              <span class="text-medium">23€</span>
             </div> <!-- /__price -->
             <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
