:feat: prepare project for release

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/restaurants_list.css" />
     <link rel="stylesheet" href="../css/restaurants_menus.css" />
     <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
   </head>
   <body>
     <!--
