--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <title>OhMyFood</title>
     <meta charset="utf-8" />
@@ -15,13 +15,14 @@
     <!-- Project logo font -->
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
-    <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/features.css" />
     <link rel="stylesheet" href="css/restaurants_list.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/responsive_tablets.css" />
+    <link rel="stylesheet" href="css/responsive_mobile.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
     <link rel="stylesheet" href="css/main.css" />
@@ -35,7 +36,7 @@
 
     -->
     <div class="loader">
-      <img src="assets/loader.gif" />
+      <img src="assets/loader.gif" alt="loader image"/>
     </div>
 
     <!--
@@ -44,7 +45,7 @@
 
     -->
     <header class="header">
-      <img class="header__img" src="assets/logo/ohmyfood.png" />
+      <img class="header__img" src="assets/logo/ohmyfood.png" alt="logo ohmyfood" />
     </header>
     <main>
       <!--
@@ -140,7 +141,7 @@
         <section class="restaurant">
           <div class="card card-restaurant">
             <div class="new">Nouveau</div>
-            <img src="assets/restaurants/la_note_enchantee.jpg" />
+            <img src="assets/restaurants/la_note_enchantee.jpg" alt="la note enchantée" />
             <div class="flex">
               <div>
                 <h3>
@@ -161,7 +162,7 @@
         -->
         <section class="restaurant">
           <div class="card card-restaurant">
-            <img src="assets/restaurants/a_la_francaise.jpg" />
+            <img src="assets/restaurants/a_la_francaise.jpg" alt="retaurant a la française" />
             <div class="flex">
               <div>
                 <h3>
@@ -182,7 +183,7 @@
         -->
         <section class="restaurant">
           <div class="card card-restaurant">
-            <img src="assets/restaurants/le_delice_des_sens.jpg" />
+            <img src="assets/restaurants/le_delice_des_sens.jpg" alt="le delice des sens" />
             <div class="flex">
               <div>
                 <h3>
