--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../css/restaurants_list.css" />
     <link rel="stylesheet" href="../css/restaurants_menus.css" />
     <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
   </head>
   <body>
     <!--
