--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/restaurants_list.css" />
     <link rel="stylesheet" href="../css/restaurants_menus.css" />
     <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
   </head>
   <body>
     <!--
