:fix: pages header refactored CSS

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
     <link rel="stylesheet" href="css/restaurants_list.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/responsive_tablets.css" />
-    <link rel="stylesheet" href="css/responsive_mobile.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- Project's built-in CSS files  -->
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/card_one.css" />
+    <link rel="stylesheet" href="css/responsive_desktop.css" />
   </head>
   <body>
 
@@ -44,7 +40,7 @@
         Page header
 
     -->
-    <header class="header">
+    <header>
       <img class="header__img" src="assets/logo/ohmyfood.png" alt="logo ohmyfood" />
     </header>
     <main>
